syntax = "proto3";

import "google/protobuf/timestamp.proto";

package kafkaMessages;

option go_package = "./;kafkaMessages";

message Task {
  string TaskID = 1;
  string Title = 2;
  string TaskKey = 3;
  string Details = 4 ;
  google.protobuf.Timestamp ExpectedDateTime = 5 ;
  int32  Status = 6 ;
  string CreatorID = 7;
  google.protobuf.Timestamp CreatedDate = 8;
  google.protobuf.Timestamp UpdatedDate = 9;
  google.protobuf.Timestamp StartDateTime = 10 ;
  google.protobuf.Timestamp EndDateTime = 11;
  string CategoryID = 12;
}

message TaskCreate {
  string TaskID = 1;
  string Title = 2;
  string TaskKey = 3;
  string Details = 4 ;
  google.protobuf.Timestamp ExpectedDateTime = 5 ;
  int32  Status = 6;
  string CreatorID = 7;
  string CategoryID = 8;
  google.protobuf.Timestamp StartDateTime = 9 ;
  google.protobuf.Timestamp EndDateTime = 10;
}

message TaskUpdate {
  string TaskID = 1;
  string Title = 2;
  string TaskKey = 3;
  string Details = 4 ;
  google.protobuf.Timestamp ExpectedDateTime = 5 ;
  int32  Status = 6;
  string CreatorID = 7;
  string CategoryID = 8;
  google.protobuf.Timestamp StartDateTime = 9 ;
  google.protobuf.Timestamp EndDateTime = 10;
}

message TaskCreated {
  Task task = 1;
}

message TaskUpdated {
  Task task = 1 ;
}

message TaskDelete {
  string TaskId = 1 ;
}

message TaskDeleted {
  string TaskId = 1;
}

